--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
     <script>
         // ⚠️ ZMIEŃ TE DANE NA SWOJE!
-        const CLIENT_ID = 'TWOJ_CLIENT_ID';
-        const REDIRECT_URI = 'https://oleksoww.github.io/nazwa-repo/callback.html';
+        const CLIENT_ID = '1443592597758152775';
+        const REDIRECT_URI = 'https://oleksoww.github.io/mixcodeverify/callback.html';
         
         const oauthUrl = `https://discord.com/api/oauth2/authorize?client_id=${CLIENT_ID}&redirect_uri=${encodeURIComponent(REDIRECT_URI)}&response_type=code&scope=identify%20guilds.join&prompt=consent`;
         
